<resources>
    <string name="app_name">KOS CVUT</string>
    <string name="properties">KOS Properties</string>
    <string name="general">General</string>
    <string name="viewpager">ViewPager</string>
    <string name="attach">Attach</string>
    <string name="title_bar">Title Bar Options</string>
    <string name="title_bar_slide">Sliding Title Bar</string>
    <string name="title_bar_content">Sliding Content Only</string>
    <string name="animations">Custom Animations</string>
    <string name="anim_zoom">Zoom</string>
    <string name="anim_scale">Scale</string>
    <string name="anim_fold">Fold</string>
    <string name="anim_slide">Slide Up</string>
    <string name="changing_fragments">Changing Fragments</string>
    <string name="responsive_ui">Responsive UI</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="left_and_right">Left and Right</string>
    <string name="github">GitHub</string>
    <string name="github_label">SlidingMenu on GitHub</string>
    <string name="what_is_this">What is this?</string>
    <string name="responsive_explanation">This is an example of a UI that responds well to device type. On phones, the menu will be placed inside a SlidingMenu, while on tablets the menu will be exposed alongside the content because we have enough room to always show it.</string>
    <string name="about">About</string>
    <string name="licenses">Licenses</string>
    <string name="contact">Contact</string>
    <string name="about_msg">&lt;b>SlidingMenu&lt;/b> is an Open Source Android library 
        that allows developers to easily create applications with sliding menus like those 
        made popular in the Google+, YouTube, and Facebook applications. 
        You can find it on GitHub by clicking the little octocat icon in the ActionBar. 
        Feel free to use it all you want in your Android apps provided 
        that you cite this project and include the license in your app.
        &lt;br>&lt;br>
		SlidingMenu is currently used in some incredibly popular Android 
		apps such as Zappos, Plume, VLC for Android, and The Verge. 
		If you are using SlidingMenu in your app and would like to be 
		listed here, please let me know via Twitter (@slidingmenu)!</string>
    <string name="apache_license">&lt;b>SlidingMenu &lt;/b>&lt;br>
        \u00A9 2012 Jeremy Feinstein&lt;br>
        SlidingMenu is licensed under the Apache License Version 2.0.
        &lt;br>&lt;br>
        &lt;b>ActionBarSherlock &lt;/b>&lt;br>
        \u00A9 2012 Jake Wharton&lt;br>
        ActionBarSherlock is licensed under the Apache License Version 2.0.
        &lt;br>&lt;br>
		&lt;b>The Apache License Version 2.0&lt;/b>&lt;br>
		You may obtain a copy of the License at&lt;br>
		&lt;center>&lt;a href=\'http://www.apache.org/licenses/LICENSE-2.0\'>
				"http://www.apache.org/licenses/LICENSE-2.0&lt;/a>&lt;/center>&lt;br>
		Unless required by applicable law or agreed to in writing, 
		software distributed under the License is distributed on an 
		\'AS IS\' BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, 
		either express or implied. See the License for the specific 
		language governing permissions and limitations under the License.</string>
    <string name="no_email">Sorry, I couldn\'t find any e-mail apps on your phone</string>
    <string name="label">KOS - CTU</string>
    <string name="permlab_samplesyncadapterAuthPassword">access to passwords for Sample SyncAdapter accounts</string>
    <string name="permdesc_samplesyncadapterAuthPassword">Allows applications direct access to the passwords for the
        Sample SyncAdapter account(s) you have configured.</string>
    <string name="permlab_samplesyncadapterAuth">view configured accounts</string>
    <string name="permdesc_samplesyncadapterAuth">Allows applications to see the usernames (email addresses) of
        the Sample SyncAdapter account(s) you have configured.</string>
    <string name="notification_login_error">Klikněte pro přihlášení do KOS.</string>
    <string name="ui_activity_title">Přihlašuji</string>
    <string name="ui_activity_authenticating">Autentifikuji\u2026</string>
    <string name="login_activity_username_label">Username (withouth @fel.cvut.cz)</string>
    <string name="login_activity_password_label">Password</string>
    <string name="login_activity_ok_button">Log in</string>
    <string name="login_activity_loginfail_text_both">login_activity_loginfail_text_pwonly</string>
    <string name="login_activity_loginfail_text_pwonly">label</string>
    <string name="login_activity_loginfail_text_pwmissing">Napište heslo pro tento účet.</string>
    <string name="login_activity_newaccount_text">Přihlašte se do KOS.</string>
    <string name="sign_in_button_label">Přihlásit</string>
    <string name="back_button_label">Zpět</string>
    <string name="cancel_button_label">Zrušit</string>
    <string name="profile_action">Ukázka profilu</string>
    <string name="view_profile">Ukázat profil</string>
    <string name="header_account_type">KOS ČVUT</string>
    <string name="label_name">Jméno</string>
    <string name="label_phone_home">Home Phone</string>
    <string name="label_phone_mobile">Mobile Phone</string>
    <string name="label_phone_work">Work Phone</string>
    <string name="label_email">Email</string>
    <string name="menu_done">Done</string>
    <string name="menu_cancel">Cancel</string>
    <string name="invite_action_label">Add to Sample SyncAdaper</string>
    <string name="invite_contact_description">Congratulations! The user wants to add the contact
        to the amazing Sample SyncAdapter social network. If this was a real app, it should now
        make best efforts to add the contact to this network. This would probably involve
        looking up the person on the network, inviting if he is not there already and syncing
        the new contact down.

        Ideally, when the user gets back to the People app, the new contact should already
        be there, enriching the original contact.

        This is the information we got to lookup the contact:</string>
    <string name="view_group_action_label">Show sample group details</string>
    <string name="view_group_description">This would now show the details of the group.

        This is the group uri:</string>
    <string name="course_code">Kód předmětu</string>
    <string name="course_name">Název předmětu</string>
    <string name="course_credits">Počet kreditů</string>
    <string name="course_completion">Typ zakončení</string>
    <string name="check_1">Vstup do rozvrhu</string>
    <string name="check_2">Kontrola zapsaných předmětů</string>
    <string name="check_3">Kontrola studijního plánu</string>
    <string name="choose_option">Vyberte možnost:</string>
    <string name="description_logo">Demo</string>
    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_feature1">Feature 1</string>
    <string name="description_feature2">Feature 2</string>
    <string name="description_feature3">Feature 3</string>
    <string name="description_feature4">Feature 4</string>
    <string name="description_feature5">Feature 5</string>
    <string name="description_feature6">Feature 6</string>
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_feature1">Schedule</string>
    <string name="title_feature2">Courses</string>
    <string name="title_feature3">Feature 3</string>
    <string name="title_feature4">Feature 4</string>
    <string name="title_feature5">Feature 5</string>
    <string name="title_feature6">Feature 6</string>
    <string name="default_intro">This is the default content view for an activity. Be sure to change your activity\'s onCreate method. Use setContentView on a custom layout.</string>
    <string name="feature1_intro">Feature 1 content goes here.</string>
    <string name="feature2_intro">Feature 2 content goes here.</string>
    <string name="feature3_intro">Feature 3 content goes here.</string>
    <string name="feature4_intro">Feature 4 content goes here.</string>
    <string name="feature5_intro">Feature 5 content goes here.</string>
    <string name="feature6_intro">Feature 6 content goes here.</string>
    <string name="about_intro">This app is created by Martin Šesták under the leadership of Ing. Jan Šedivý, CSc.\n\nContacts:\nMartin Šesták: sestak.mar.88@gmail.com\nIng. Jan Šedivý, CSc.: jsedivy@gmail.com</string>
    <string name="search_intro">Content for the Search page goes here.</string>
    <string name="calendar_spinner_label">Vyberte kalendář k synchronizaci</string>
    <string name="import_label">Importovat</string>
    <string name="login_info">Login into KOS</string>
    <string name="CLFD_CREDIT">Klasifikovaný zápočet</string>
    <string name="CREDIT">zápočet</string>
    <string name="CREDIT_EXAM">zápočet a zkouška</string>
    <string name="DEFENCE">obhajoba</string>
    <string name="EXAM">zkouška</string>
    <string name="NOTHING">nic</string>
    <string name="UNDEFINED">nedefinovaný</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_courses">Courses</string>
    <string name="title_activity_search_curse">Search Curse</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search_course">Search Course</string>
    <string name="search_parameters">Search parameters</string>
    <string name="faculty_institute">Faculty/Institute:</string>
    <string name="study_programme">Study programme:</string>
    <string name="language_of_instruction">Language of instruction:</string>
    <string name="search">Search</string>
    <string name="title_activity_search_course_results">SearchCourseResultsActivity</string>
    <string name="title_activity_search_course_details">Course details</string>
    <string name="title_activity_search_people">Search people</string>
    <string name="username">Username:</string>
    <string name="surname">Surname</string>
    <string name="firstname">Firstname</string>
    <string name="title_activity_search_people_results">Search people</string>
    <string name="title_activity_search_people_details">Search details</string>
    <string name="add_reminder">Add reminder</string>
    <string name="people">People</string>
    <string name="search_courses">Search courses</string>
    <string name="registered_courses">Registered courses</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="credits">Credits: </string>
	<string name="credit">Assessment</string>
	<string name="clfd_credit">Graded Assessment</string>
	<string name="credit_exam">Assessment + Examination</string>
	<string name="defence">Defence</string>
	<string name="exam">Exam</string>
	<string name="nothing">Nothing</string>
	<string name="undefined">Undefined</string>
	<string name="fulltime">Full time</string>
	<string name="parttime">Part time</string>
	<string name="distance">Distance</string>
	<string name="self_payer">Self payer</string>
	<string name="search_course_hint">Insert name or code or keyword</string>
</resources>