<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:fadingEdge="none"
        android:fillViewport="true"
        android:scrollbarStyle="outsideOverlay" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/calendar_spinner_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right|top"
                android:paddingRight="10dip"
                android:text="@string/calendar_spinner_label"/>

            <Spinner
                android:id="@+id/calendars"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true" />

            <TextView
                android:id="@+id/output"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_reminder" />

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:entries="@array/reminder" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/bottom_bar"
        android:orientation="horizontal"
        android:paddingBottom="1dip"
        android:paddingLeft="4dip"
        android:paddingRight="4dip"
        android:paddingTop="5dip" >

        <Button
            android:id="@+id/import_button"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/import_label" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@android:string/cancel" />
    </LinearLayout>

</LinearLayout>